# gym-gazebo-sim

./: .gitignore  LICENSE.md  README.md  install.sh  pyproject.toml  train_cartpole.py
gym_gazebo/core/: __init__.py  gazebo_env.py
gym_gazebo/envs/: __init__.py  cartpole_env.py
gym_gazebo/utils/: cartpole_utils.py
ros2_ws/custom_plugins/include/custom_plugins/: ResetSimPlugin.hh
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/custom_plugins/include/custom_plugins/: ResetSimPlugin.hh
ros2_ws/install/custom_plugins/share/custom_plugins/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/my_agent_bringup/share/my_agent_bringup/: local_setup.bash  local_setup.dsv  package.dsv  (+7 more)
ros2_ws/my_agent_bringup/launch/: my_agent.launch.xml  my_cartpole.launch.xml
ros2_ws/my_agent_bringup/world/: monza.sdf
ros2_ws/my_agent_description/: package.xml
ros2_ws/my_agent_description/urdf/cartpole/: cartpole.urdf.xacro
ros2_ws/src/cartpole_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/cartpole_ros/config/: gazebo_bridge.yaml
ros2_ws/src/cartpole_ros/launch/: my_cartpole.launch.xml
ros2_ws/src/cartpole_ros/urdf/: cartpole.urdf.xacro
ros2_ws/src/cartpole_ros/world/: cartpole.sdf
ros2_ws/src/custom_plugins/: CMakeLists.txt  package.xml
ros2_ws/src/custom_plugins/include/custom_plugins/: ResetSimPlugin.hh
ros2_ws/src/custom_plugins/src/: ResetSimPlugin.cc
ros2_ws/src/linefollow_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/linefollow_ros/config/: keypublisher.config
ros2_ws/src/linefollow_ros/launch/: my_agent.launch.xml
ros2_ws/src/linefollow_ros/urdf/: mobile_base_gazebo.xacro  my_robot.urdf.xacro
ros2_ws/src/my_agent_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/my_agent_bringup/world/: cartpole.sdf
ros2_ws/src/my_agent_description/: CMakeLists.txt
ros2_ws/src/my_agent_description/launch/: display.launch.xml
ros2_ws/src/my_agent_description/rviz/: urdf_config.rviz
runs/Jun15_12-14-58_fizzer-VirtualBox/: events.out.tfevents.1781550898.fizzer-VirtualBox.12053.0
runs/Jun15_12-15-26_fizzer-VirtualBox/: events.out.tfevents.1781550926.fizzer-VirtualBox.12080.0
runs/Jun15_12-18-34_fizzer-VirtualBox/: events.out.tfevents.1781551114.fizzer-VirtualBox.12164.0
runs/Jun15_12-20-14_fizzer-VirtualBox/: events.out.tfevents.1781551214.fizzer-VirtualBox.12381.0
runs/Jun15_12-22-28_fizzer-VirtualBox/: events.out.tfevents.1781551348.fizzer-VirtualBox.12608.0
runs/Jun15_12-25-47_fizzer-VirtualBox/: events.out.tfevents.1781551547.fizzer-VirtualBox.12884.0
src/gym_gazebo/: __init__.py
src/gym_gazebo/core/: gazebo_env.py
src/gym_gazebo/envs/: cartpole_env.py  linefollower_env.py
src/gym_gazebo/utils/: linefollower_utils.py
training_scripts/: train_cartpole.py  train_linefollower.py
(+44 files in other folders)
