[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gym_gazebo_sim"
version = "0.0.1"
dependencies = [
    "gymnasium>=1.3.0",
    "torch>=2.12.0",
    "tensorboard",
    "numpy>=1.26.0",
]
requires-python = ">=3.12.3"
authors = [
    {name="Taiga Momose", email="taigasery78@gmail.com" },
    {name="Miti Isbasescu", email="miti@phas.ubc.ca" },
]
description = "A package to provide a gym environment for Gazebo simulation."
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
]

[project.urls]
Homepage = "https://github.com/ENPH353/gym-gazebo-sim"
Issues = "https://github.com/ENPH353/gym-gazebo-sim/issues"

[tool.setuptools]
license-files = ["LICEN[CS]E*"]